# allure-behavior-snippets

./: .gitignore  Dockerfile  behaviors.json  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  renovate.json  requirements.txt  setup_docker_compose_env.sh
.github/workflows/: docker-publish.yml  renovate-approve.yml  update-pr-branch.yml
allure_behavior_snippets/: main.py
images/: index.html
tests/: .env  Dockerfile  acceptance_tests.py  docker-compose.yml  docker-entrypoint.sh  pytest-docker.ini  pytest.ini  test_unittests.py  unittests.py
tests/allure-report/: allure-maven.html  index.html
tests/allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
tests/allure-report/data/attachments/: 1749829d3186630c.html  539c5a4860ebf6de.html  5b98a7d592b1f1ef.html  6958f0e6bce93161.html  7ba6498683567ba3.html  c5dccd36854c7950.html  da325ada7a460494.html  e582220471d09ddf.html
tests/allure-report/data/test-cases/: 1d1e82d59dc3a983.json  211c9104ec06d3d8.json  2c6b14dc9816c312.json  b5b9fe7670327db2.json  da47a6c965e81503.json  e070af5790113ec3.json  eab8362bd352ce21.json  fa46ea3e315f2e6f.json
tests/allure-report/export/: influxDbData.txt  prometheusData.txt
tests/allure-report/history/: duration-trend.json  history.json
tests/allure-report/widgets/: behaviors.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
